--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"formik": "^2.4.6",
 		"next": "^14.2.15",
 		"react": "^18",
 		"react-dom": "^18",
 		"react-icons": "^5.3.0",
 		"react-loader-spinner": "^6.1.6",
 		"sass": "^1.77.8",
-		"swiper": "^11.1.14"
+		"swiper": "^11.1.14",
+		"yup": "^1.4.0"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
