--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"axios": "^1.7.7",
 		"formik": "^2.4.6",
+		"moment": "^2.30.1",
 		"next": "^14.2.15",
 		"react": "^18",
 		"react-dom": "^18",
