--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@reduxjs/toolkit": "^2.4.0",
 		"axios": "^1.7.7",
 		"formik": "^2.4.6",
 		"next": "^14.2.15",
@@ -16,6 +17,7 @@
 		"react-dom": "^18",
 		"react-icons": "^5.3.0",
 		"react-loader-spinner": "^6.1.6",
+		"react-redux": "^9.1.2",
 		"sass": "^1.77.8",
 		"swiper": "^11.1.14",
 		"yup": "^1.4.0"
@@ -24,6 +26,7 @@
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
+		"@types/react-redux": "^7.1.34",
 		"eslint": "^8",
 		"eslint-config-next": "14.2.7",
 		"typescript": "^5"
