--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"axios": "^1.7.7",
 		"formik": "^2.4.6",
 		"next": "^14.2.15",
+		"next-redux-wrapper": "^8.1.0",
 		"nextjs-toploader": "^3.7.15",
 		"react": "^18",
 		"react-dom": "^18",
