--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"@reduxjs/toolkit": "^2.4.0",
+		"@types/react-modal": "^3.16.3",
 		"axios": "^1.7.7",
 		"formik": "^2.4.6",
 		"next": "^14.2.15",
@@ -18,6 +19,7 @@
 		"react-dom": "^18",
 		"react-icons": "^5.3.0",
 		"react-loader-spinner": "^6.1.6",
+		"react-modal": "^3.16.1",
 		"react-redux": "^9.1.2",
 		"sass": "^1.77.8",
 		"swiper": "^11.1.14",
