--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "next lint",
+		"server": "json-server --watch src/utils/dummyData.json --port 9000"
 	},
 	"dependencies": {
 		"@reduxjs/toolkit": "^2.4.0",
 		"@types/react-modal": "^3.16.3",
 		"axios": "^1.7.7",
 		"formik": "^2.4.6",
+		"json-server": "^1.0.0-beta.3",
 		"next": "^14.2.15",
 		"nextjs-toploader": "^3.7.15",
 		"react": "^18",
